--- a/DOM/16_节点.html
+++ b/DOM/16_节点.html
@@ -7,13 +7,50 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
+    <div id = "div1">111</div>
+     <ul id= "ul1">
+         <li>111</li>
+         <li>2222</li>
+         <li id = "li3">33333</li>
+     </ul>
 
-        111
-    <ul>
+    <script>
+    var oDiv = document.getElementById("div1");
+    var oLi = document.getElementById("li3");
 
-        <li>111</li>
-    </ul>
-    </div>
+
+    // console.log(oDiv.nodeType); //元素节点类型是1
+    // console.log(oDiv.firstChild.nodeType);//文本节点类型
+    // console.log(oDiv.firstChild.nodeName);//元素节点返回tagname，文本节点返回#text；
+    // console.log(oDiv.nodeValue)//元素节点是null   文本节点的值是本身
+
+
+    //节点的遍历
+
+    // console.log(oDiv.nextSibling);// "↵     "标准浏览器      ie下一个元素
+    // console.log(oDiv.nextElementSibling);//下一个元素兄弟  ie不支持 
+    // function next(elem){
+    //     do{
+    //     elem = elem.nextSibling;
+    //     }while(elem.nodeType!=1){
+    //         return elem;
+    //     }
+    // }
+    // console.log(next(oDiv));
+    
+
+
+    //当下一个兄弟为空的时候
+    // function next(elem){
+    //     do{
+    //     elem = elem.nextSibling;
+    //     }while(elem && elem.nodeType!=1){
+    //         return elem;
+    //     }
+    // }
+    // console.log(next(oLi));
+    var oUl1 = document.getElementById("ul1");
+    console.log(oUl1.children);
+    </script> 
 </body>
 </html>
