--- a/jquery/练习/4.轮播图.html
+++ b/jquery/练习/4.轮播图.html
@@ -97,6 +97,13 @@
         }
         change(iNow);
     })
+    $('#prev').on('click',function(){
+        iNow--;
+        if(iNow==0){
+            iNow==$('btn-box li').size();
+        }
+        change(iNow);
+    })
      function change(index){
          $('#btn-box li').eq(index).addClass('active').siblings().removeClass('active');
          $('#img-box a').eq(index).addClass('selected').siblings().removeClass('selected')
