--- a/jquery/练习/1.test.html
+++ b/jquery/练习/1.test.html
@@ -23,7 +23,7 @@
         </div>
         <script>
         $('#checkedAll').on('click',function(){
-            $(":checkbox").prop('checked',true);
+            $(":checkbox").prop('checked',true);//prop给元素加上多个属性
         })
         $('#checkedNo').on('click',function(){
             $(':checkbox').prop('checked',false);
