--- a/jquery/练习/广告/7_网上商城/index.html
+++ b/jquery/练习/广告/7_网上商城/index.html
@@ -1,201 +1,177 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Jane shopping</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 <link rel="stylesheet" href="styles/reset.css" type="text/css" />
 <link rel="stylesheet" href="styles/main.css" type="text/css" />
 <link rel="stylesheet" href="styles/skin/skin_0.css" type="text/css" id="cssfile" />
-<!-- <script src="scripts/jquery.min.js" type="text/javascript"></script>
-<script src="scripts/jquery.cookie.js" type="text/javascript"></script>
-<script src="index.js"></script> -->
-
-
-
-
-
-
-
-
-<!-- 搜索文本框效果 -->
-<!-- <script src="scripts/input.js" type="text/javascript"></script> -->
-<!-- 修改皮肤样式 -->
-<!-- <script src="scripts/changeSkin.js" type="text/javascript"></script> -->
-<!-- 导航效果 -->
-<!-- <script src="scripts/nav.js" type="text/javascript"></script> -->
-<!-- 添加hot显示 -->
-<!-- <script src="scripts/addhot.js" type="text/javascript"></script> -->
-<!-- 首页大屏广告效果 -->
-<!-- <script src="scripts/ad.js" type="text/javascript"></script> -->
-<!-- 超链接文字提示 -->
-<!-- <script src="scripts/tooltip.js" type="text/javascript"></script> -->
-<!-- 品牌活动模块横向滚动 -->
-<!-- <script src="scripts/imgSlide.js" type="text/javascript"></script> -->
-<!-- 滑过图片出现放大镜效果 -->
-<!-- <script src="scripts/imgHover.js" type="text/javascript"></script> -->
 <script src="F:\work\LaoHeYa\jquery\jquery-1.12.4.js"></script>
+<script src="../7_网上商城/js文件/color.js"></script>
 </head>
 <body>
 <!--头部开始-->
 <div id="header">
 	<div class="contWidth">
-		<a class="logo" href="#nogo"><img src="images/logo.gif" alt="JaneShop"/></a>
-		<div class="search">
-			<input type="text" id="inputSearch" class="" value="请输入商品名称" />
-		</div>
-		<ul id="skin">
-			<li id="skin_0" title="蓝色" class="selected">蓝色</li>
-			<li id="skin_1" title="紫色">紫色</li>
-			<li id="skin_2" title="红色">红色</li>
-			<li id="skin_3" title="天蓝色">天蓝色</li>
-			<li id="skin_4" title="橙色">橙色</li>
-			<li id="skin_5" title="淡绿色">淡绿色</li>
+	<a class="logo" href="#nogo"><img src="images/logo.gif" alt="JaneShop"/></a>
+	<div class="search">
+		<input type="text" id="inputSearch" class="" value="请输入商品名称" />
+	</div>
+	<ul id="skin">
+		<li id="skin_0" title="蓝色" class="selected">蓝色</li>
+		<li id="skin_1" title="紫色">紫色</li>
+		<li id="skin_2" title="红色">红色</li>
+		<li id="skin_3" title="天蓝色">天蓝色</li>
+		<li id="skin_4" title="橙色">橙色</li>
+		<li id="skin_5" title="淡绿色">淡绿色</li>
+	</ul>
+	<!-- 导航 start -->
+	<div id="nav" class="mainNav">
+		<ul class="nav">
+		 <li><a href="#">首 页</a></li>
+		 <li><a href="#">品 牌</a>
+			<div class="jnNav">
+			<div class="subitem">
+				<dl class="fore">
+				dt>
+					<a href="#nogo">品牌：</a>
+				/dt>
+				dd>
+					<em ><a href="#nogo">耐克</a></em>
+					<em ><a href="#nogo">阿迪达斯</a></em>
+					<em ><a href="#nogo">达芙妮</a></em>
+					<em ><a href="#nogo">李宁</a></em>
+					<em ><a href="#nogo">安踏</a></em>
+					<em ><a href="#nogo">奥康</a></em>
+					<em ><a href="#nogo">骆驼</a></em>
+					<em ><a href="#nogo">特步</a></em>
+					<em ><a href="#nogo">耐克</a></em>
+					<em ><a href="#nogo">阿迪达斯</a></em>
+						<em ><a href="#nogo">达芙妮</a></em>
+						<em ><a href="#nogo">李宁</a></em>
+							<em class="noborder"><a href="#nogo">特步</a></em>
+						</dd>
+					</dl>
+					<dl>
+						<dt>
+							<a href="#nogo">品牌：</a>
+						</dt>
+						<dd>
+							<em ><a href="#nogo">耐克</a></em>
+							<em ><a href="#nogo">阿迪达斯</a></em>
+							<em ><a href="#nogo">达芙妮</a></em>
+							<em ><a href="#nogo">李宁</a></em>
+							<em ><a href="#nogo">安踏</a></em>
+							<em ><a href="#nogo">奥康</a></em>
+							<em ><a href="#nogo">骆驼</a></em>
+							<em ><a href="#nogo">特步</a></em>
+							<em ><a href="#nogo">耐克</a></em>
+							<em ><a href="#nogo">阿迪达斯</a></em>
+							<em ><a href="#nogo">达芙妮</a></em>
+							<em ><a href="#nogo">李宁</a></em>
+							<em class="noborder"><a href="#nogo">特步</a></em>
+						</dd>
+					</dl>
+					</div>
+				</div>
+			</li>
+			<li><a href="#">女 装</a>
+				<div class="jnNav">
+					<div class="subitem">
+						<dl class="fore">
+							<dt>
+								<a href="#nogo">女 装：</a>
+							</dt>
+							<dd>
+								<em ><a href="#nogo">耐克</a></em>
+								<em ><a href="#nogo">阿迪达斯</a></em>
+								<em ><a href="#nogo">达芙妮</a></em>
+								<em ><a href="#nogo">李宁</a></em>
+								<em ><a href="#nogo">安踏</a></em>
+								<em ><a href="#nogo">奥康</a></em>
+								<em ><a href="#nogo">骆驼</a></em>
+								<em ><a href="#nogo">特步</a></em>
+								<em ><a href="#nogo">耐克</a></em>
+								<em ><a href="#nogo">阿迪达斯</a></em>
+								<em ><a href="#nogo">达芙妮</a></em>
+								<em ><a href="#nogo">李宁</a></em>
+								<em class="noborder"><a href="#nogo">特步</a></em>
+							</dd>
+						</dl>
+						<dl>
+							<dt>
+								<a href="#nogo">女 装：</a>
+							</dt>
+							<dd>
+								<em ><a href="#nogo">耐克</a></em>
+								<em ><a href="#nogo">阿迪达斯</a></em>
+								<em ><a href="#nogo">达芙妮</a></em>
+								<em ><a href="#nogo">李宁</a></em>
+								<em ><a href="#nogo">安踏</a></em>
+								<em ><a href="#nogo">奥康</a></em>
+								<em ><a href="#nogo">骆驼</a></em>
+								<em ><a href="#nogo">特步</a></em>
+								<em ><a href="#nogo">耐克</a></em>
+								<em ><a href="#nogo">阿迪达斯</a></em>
+								<em ><a href="#nogo">达芙妮</a></em>
+								<em ><a href="#nogo">李宁</a></em>
+								<em class="noborder"><a href="#nogo">特步</a></em>
+							</dd>
+						</dl>
+					</div>
+				</div>
+			</li>
+			<li><a href="#">男 装</a>
+				<div class="jnNav">
+					<div class="subitem">
+						<dl class="fore">
+							<dt>
+								<a href="#nogo">男 装：</a>
+							</dt>
+							<dd>
+								<em ><a href="#nogo">耐克</a></em>
+								<em ><a href="#nogo">阿迪达斯</a></em>
+								<em ><a href="#nogo">达芙妮</a></em>
+								<em ><a href="#nogo">李宁</a></em>
+								<em ><a href="#nogo">安踏</a></em>
+								<em ><a href="#nogo">奥康</a></em>
+								<em ><a href="#nogo">骆驼</a></em>
+								<em ><a href="#nogo">特步</a></em>
+								<em ><a href="#nogo">耐克</a></em>
+								<em ><a href="#nogo">阿迪达斯</a></em>
+								<em ><a href="#nogo">达芙妮</a></em>
+								<em ><a href="#nogo">李宁</a></em>
+								<em class="noborder"><a href="#nogo">特步</a></em>
+							</dd>
+						</dl>
+						<dl>
+							<dt>
+								<a href="#nogo">男 装：</a>
+							</dt>
+							<dd>
+								<em ><a href="#nogo">耐克</a></em>
+								<em ><a href="#nogo">阿迪达斯</a></em>
+								<em ><a href="#nogo">达芙妮</a></em>
+								<em ><a href="#nogo">李宁</a></em>
+								<em ><a href="#nogo">安踏</a></em>
+								<em ><a href="#nogo">奥康</a></em>
+								<em ><a href="#nogo">骆驼</a></em>
+								<em ><a href="#nogo">特步</a></em>
+								<em ><a href="#nogo">耐克</a></em>
+								<em ><a href="#nogo">阿迪达斯</a></em>
+								<em ><a href="#nogo">达芙妮</a></em>
+								<em ><a href="#nogo">李宁</a></em>
+								<em class="noborder"><a href="#nogo">特步</a></em>
+							</dd>
+						</dl>
+					</div>
+				</div>
+			 </li>
+			 <li><a href="#">鞋包配饰</a></li>
 		</ul>
-		<!-- 导航 start -->
-		<div id="nav" class="mainNav">
-			<ul class="nav">
-				 <li><a href="#">首 页</a></li>
-				 <li><a href="#">品 牌</a>
-					<div class="jnNav">
-						<div class="subitem">
-							<dl class="fore">
-								<dt>
-									<a href="#nogo">品牌：</a>
-								</dt>
-								<dd>
-									<em ><a href="#nogo">耐克</a></em>
-									<em ><a href="#nogo">阿迪达斯</a></em>
-									<em ><a href="#nogo">达芙妮</a></em>
-									<em ><a href="#nogo">李宁</a></em>
-									<em ><a href="#nogo">安踏</a></em>
-									<em ><a href="#nogo">奥康</a></em>
-									<em ><a href="#nogo">骆驼</a></em>
-									<em ><a href="#nogo">特步</a></em>
-									<em ><a href="#nogo">耐克</a></em>
-									<em ><a href="#nogo">阿迪达斯</a></em>
-									<em ><a href="#nogo">达芙妮</a></em>
-									<em ><a href="#nogo">李宁</a></em>
-									<em class="noborder"><a href="#nogo">特步</a></em>
-								</dd>
-							</dl>
-							<dl>
-								<dt>
-									<a href="#nogo">品牌：</a>
-								</dt>
-								<dd>
-									<em ><a href="#nogo">耐克</a></em>
-									<em ><a href="#nogo">阿迪达斯</a></em>
-									<em ><a href="#nogo">达芙妮</a></em>
-									<em ><a href="#nogo">李宁</a></em>
-									<em ><a href="#nogo">安踏</a></em>
-									<em ><a href="#nogo">奥康</a></em>
-									<em ><a href="#nogo">骆驼</a></em>
-									<em ><a href="#nogo">特步</a></em>
-									<em ><a href="#nogo">耐克</a></em>
-									<em ><a href="#nogo">阿迪达斯</a></em>
-									<em ><a href="#nogo">达芙妮</a></em>
-									<em ><a href="#nogo">李宁</a></em>
-									<em class="noborder"><a href="#nogo">特步</a></em>
-								</dd>
-							</dl>
-						</div>
-					</div>
-				</li>
-				<li><a href="#">女 装</a>
-					<div class="jnNav">
-						<div class="subitem">
-							<dl class="fore">
-								<dt>
-									<a href="#nogo">女 装：</a>
-								</dt>
-								<dd>
-									<em ><a href="#nogo">耐克</a></em>
-									<em ><a href="#nogo">阿迪达斯</a></em>
-									<em ><a href="#nogo">达芙妮</a></em>
-									<em ><a href="#nogo">李宁</a></em>
-									<em ><a href="#nogo">安踏</a></em>
-									<em ><a href="#nogo">奥康</a></em>
-									<em ><a href="#nogo">骆驼</a></em>
-									<em ><a href="#nogo">特步</a></em>
-									<em ><a href="#nogo">耐克</a></em>
-									<em ><a href="#nogo">阿迪达斯</a></em>
-									<em ><a href="#nogo">达芙妮</a></em>
-									<em ><a href="#nogo">李宁</a></em>
-									<em class="noborder"><a href="#nogo">特步</a></em>
-								</dd>
-							</dl>
-							<dl>
-								<dt>
-									<a href="#nogo">女 装：</a>
-								</dt>
-								<dd>
-									<em ><a href="#nogo">耐克</a></em>
-									<em ><a href="#nogo">阿迪达斯</a></em>
-									<em ><a href="#nogo">达芙妮</a></em>
-									<em ><a href="#nogo">李宁</a></em>
-									<em ><a href="#nogo">安踏</a></em>
-									<em ><a href="#nogo">奥康</a></em>
-									<em ><a href="#nogo">骆驼</a></em>
-									<em ><a href="#nogo">特步</a></em>
-									<em ><a href="#nogo">耐克</a></em>
-									<em ><a href="#nogo">阿迪达斯</a></em>
-									<em ><a href="#nogo">达芙妮</a></em>
-									<em ><a href="#nogo">李宁</a></em>
-									<em class="noborder"><a href="#nogo">特步</a></em>
-								</dd>
-							</dl>
-						</div>
-					</div>
-				</li>
-				<li><a href="#">男 装</a>
-					<div class="jnNav">
-						<div class="subitem">
-							<dl class="fore">
-								<dt>
-									<a href="#nogo">男 装：</a>
-								</dt>
-								<dd>
-									<em ><a href="#nogo">耐克</a></em>
-									<em ><a href="#nogo">阿迪达斯</a></em>
-									<em ><a href="#nogo">达芙妮</a></em>
-									<em ><a href="#nogo">李宁</a></em>
-									<em ><a href="#nogo">安踏</a></em>
-									<em ><a href="#nogo">奥康</a></em>
-									<em ><a href="#nogo">骆驼</a></em>
-									<em ><a href="#nogo">特步</a></em>
-									<em ><a href="#nogo">耐克</a></em>
-									<em ><a href="#nogo">阿迪达斯</a></em>
-									<em ><a href="#nogo">达芙妮</a></em>
-									<em ><a href="#nogo">李宁</a></em>
-									<em class="noborder"><a href="#nogo">特步</a></em>
-								</dd>
-							</dl>
-							<dl>
-								<dt>
-									<a href="#nogo">男 装：</a>
-								</dt>
-								<dd>
-									<em ><a href="#nogo">耐克</a></em>
-									<em ><a href="#nogo">阿迪达斯</a></em>
-									<em ><a href="#nogo">达芙妮</a></em>
-									<em ><a href="#nogo">李宁</a></em>
-									<em ><a href="#nogo">安踏</a></em>
-									<em ><a href="#nogo">奥康</a></em>
-									<em ><a href="#nogo">骆驼</a></em>
-									<em ><a href="#nogo">特步</a></em>
-									<em ><a href="#nogo">耐克</a></em>
-									<em ><a href="#nogo">阿迪达斯</a></em>
-									<em ><a href="#nogo">达芙妮</a></em>
-									<em ><a href="#nogo">李宁</a></em>
-									<em class="noborder"><a href="#nogo">特步</a></em>
-								</dd>
-							</dl>
-						</div>
-					</div>
-				 </li>
-				 <li><a href="#">鞋包配饰</a></li>
-			</ul>
-		</div>
+	</div>
 		<!-- 导航 end -->
 	</div>
 </div>
@@ -390,8 +366,7 @@
 <!--底部结束-->
     <script>
 $('#skin li').on('click',function(){
-	$('#skin li').addClass('selected').siblings().removeClass('selected');
-	$('nav').
+	$('#skin li').addClass('selected').siblings().removeClass('selected')
 })
 
 
