--- a/jquery/练习/网页换肤/2-网页换肤/demo5.html
+++ b/jquery/练习/网页换肤/2-网页换肤/demo5.html
@@ -8,7 +8,7 @@
 	<meta charset="utf-8"/>
 	<link href="css/default.css" rel="stylesheet" type="text/css" />
 	<link href="css/skin_0.css" rel="stylesheet" type="text/css" id="cssfile" />
-	<script src="F:\work\LaoHeYa\jquery\jquery-1.12.4.js"></script>
+	<script src="../../../jquery-1.12.4.js"></script>
 	<script src="../2-网页换肤/demo5.js"></script>
 	
 </head>
