--- a/es6/1.let.html
+++ b/es6/1.let.html
@@ -14,18 +14,19 @@
        4.let 暂时性死去或临时失效区  当前作用域不允许同名的变量 -->
    
     <script>
-    //1.变量提升（当前作用域的上边定义了一个变量，没有赋值
+    //1.变量提升 (当前作用域的上边定义了一个变量，没有赋值)
     //console.log(a);
     //var a = 10;
 
-//    console.log(b);
-//    let b=10;
+    // console.log(b);
+    // let b = 10;
 
 
 
     //   var a = 10;
     //   var a = 20;
     //   console.log(a);
+
     //   let a = 10;
     //   let a = 20;
     //   console.log(a);
@@ -43,6 +44,10 @@
         //     let n = 100;
         // }
         // console.log(n);
+    
+      
+
+
         // var x = 10;
         // function a(){
         //      console.log(x);
@@ -54,6 +59,9 @@
         //     console.log(x);
         //     var x = 20;
         // }
+
+
+
         var x = 10;
         function a(){
              console.log(x);
