--- a/es6/19.promise.html
+++ b/es6/19.promise.html
@@ -23,7 +23,7 @@
 
         // });
          new Promise(function(resolve,reject){
-            $.get('url1',function(data){
+            $.get('url1',function(data){//url1：请求的地址
                 if(data){
                      resolve(data.id) 
                 }
