--- a/vue/3.v-text.html
+++ b/vue/3.v-text.html
@@ -9,16 +9,19 @@
 </head>
 <body>
         <div id="app">
-               
-                </div>
-               <span v-text>
+              <!-- <span v-text>
                  {{msg}}
+                 {{num}}
+               </span>  -->
+               <span v-html = 'msg'>
+
                </span>
+                </div>
                 <script>
                  let vm = new Vue({
                      el:"#app",  //挂载元素
                      data:{
-                         msg:'hahha',
+                         msg:'<h2>hahha</h2>',
                          num:18
                      }
                  });
