--- a/vue/11.conputed.html
+++ b/vue/11.conputed.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,51 @@
     <title>Document</title>
     <script src="vue.js"></script>
 </head>
+
 <body>
-    
+    <div id="app">
+        <h2>
+            firstName:{{firstName}}
+        </h2>
+        <h2>
+            lastName:{{lastName}}
+        </h2>
+        <h2>
+            fullName:{{fullName}}
+        </h2>
+    </div>
     <script>
+        new Vue({
+            el: "#app",
+            data: {
+                firstName: 'he',
+                lastName: "yuqing"
+            },
+            //计算属性
+            computed: {
+                // fullName(){
+                //     return this.firstName +" "+this.lastName;
+                // }
+                fullName: {
+                    get: function () {
+                        return this.firstName + " " + this.lastName;
+                    },
+                    set: function (newName) {
+                        console.log('newName')
+                        let arr = newName.split(" ")
+                        this.firstName = arr[0];
+                        this.lastName = arr[1];
+                    }
+                }
+            },
+            watch:{
+                firstName: function(){
+                    console.log('haha');
+                    
+                }
+            }
+        })
     </script>
 </body>
+
 </html>
