--- a/vue/10.set.html
+++ b/vue/10.set.html
@@ -5,8 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="vue.js"></script>
 </head>
 <body>
-    
+    <div id="app">
+        <ul>
+            <li v-for = "val in arr">
+            {{val}}
+            </li>
+        </ul>
+        <button @click = 'fn()'>click</button>
+    </div>
+    <script>
+    new Vue({
+        el:"#app",
+        data:{
+            arr:['zhangsan',"lisi",'wangwu']
+        },
+        methods:{
+            fn(){
+                // this.arr[0] = "laohe"
+                Vue.set (this.arr,0,"laohe")
+            }
+        }
+    })
+    </script>
 </body>
 </html>
