--- a/React/2.组件.html
+++ b/React/2.组件.html
@@ -18,9 +18,10 @@
     <script type="text/babel">
 
         // 函数方式定义组件
-        //1.组件开头大写
-        //2.组件只能有一个根元素
-        //3.元素要闭合
+        // 1.组件开头大写
+        // 2.组件只能有一个根元素
+        // 3.元素要闭合
+        // 4.不能有state,也无法更改
             const Welcome = (props) =>{
                 return (
                     <div>
