--- a/React/5.html
+++ b/React/5.html
@@ -11,7 +11,7 @@
 
     <script src="react.development.js"></script>
     <script src="react-dom.development.js"></script>
-    <script src="browser.min.js"></script><!-- es6转化为es5 -->
+    <script src="browser.min.js"></script><!-- es6转化为es5,识别js语法 -->
 
     <script type="text/babel">
     class Welcome extends React.Component{
